Fix large whitespace issue at top of page by removing negative margin

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -5,7 +5,7 @@
 #main {
   @include container;
   @include clearfix;
-  margin-top: 1em;
+  margin-top: 0.5em;
   padding-left: 1em;
   padding-right: 0.5em;
   animation: intro 0.3s both;
@@ -50,15 +50,7 @@
 
 .page__content {
   #about-me{
-    margin-top: -10em;
-      &:before { 
-        content: ''; 
-        display: block; 
-        position: relative; 
-        width: 0; 
-        height: 10em; 
-        margin-top: -10em;
-    }
+    margin-top: 0;
   }
   h1 {
     margin-top: 1.2em;
